Fix issue that /ReportSuppressedDiagnostics is sometimes applied when the flag is not available.
Add debug output (memory, running services and eventlog) when Invoke-ScriptInBcContainer is failing
Re-throw Out Of Memory exception if container is out of memory when using Invoke-ScriptInBcContainer

3.0.7
Add --no-cache when building docker images to avoid reuse of faulty layers
New parameter IncludeSourceInPackageFile on Get-BcContainerAppRuntimePackage

3.0.6
Fix issue with wrong extension of BuildOutputFile

3.0.5
Issue #2381 Run-AlValidation -nextmajor fails if nextmajor is not available (should be ignored)
Issue #2379 Better error message from Publish-PerTenantExtensionApps
Issue #2378 give warnings instead of failing on self-signed certificates when running as non-admins
Issue #2371 Incremental wait times when admin center API errors
Issue #2388 Sign-NavContainerApp fails with SSL/TLS error in Sign-tool download
Issue #2365 New Parameter on Compile-AppInBcContainer (-ReportSuppressedDiagnostics) to ignore pragmas (include by default on Run-AlCops)
Issue #2364 Run-TestsInBcContainer fails with certificate validation error
Better error message when authentication fails in Publish-PerTenantExtensionApps
Issue #2393 Scopes is wrong when using ClientId, ClientSecret and TenantId in Publish-PerTenantExtensionApps
Run-AlValidation to check whether app is signed (unless SkipVerification is specified)
Add flag UpdateDependencies to Run-AlPipeline and Compile-AppInBcContainer to update dependencies in compiled .app files to reference versions used during build
Allow Flush-ContainerHelperCache to run in parallel on the same host
Allow whitespaces in hosts file during updatehosts.
New-BcContainerWizard to find latest version using the country which is being built latest
Add BuildOutputFile parameter to Run-AlPipeline to dump all build Output to file
Add functionality to generate dependency artifact in Run-AlPipeline with all references dependencies

3.0.4